<resources>
    <string name="to_label">To:</string>
    <string name="email_hint">Enter email address</string>
    <string name="subject_hint">Subject</string>
    <string name="message_hint">Message</string>
    <string name="send_button">Send</string>
    <string name="app_name">Constrain layouts</string>
    <string-array name="materiales">
        <item>Metal</item>
        <item>Plastico</item>
        <item>Vidrio</item>
        <item>Papel/Carton</item>
        <item>Organicos</item>
    </string-array>
</resources>